rusty_c/mydisk/out.txt
   Compiling lock_api v0.4.10
warning: unused import: `std::process::Command`
 --> build.rs:3:5
  |
3 | use std::process::Command;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

warning: unused variable: `riscv_gcc_path`
  --> build.rs:13:9
   |
13 |     let riscv_gcc_path = super_directory.join("riscv64-unknown-elf-gcc");
   |         ^^^^^^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_riscv_gcc_path`
   |
   = note: `#[warn(unused_variables)]` on by default

warning: `mydisk` (build script) generated 2 warnings
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/egos.h:1:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/file.h:33:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/inode.h:38:9: warning: #pragma once in main file
warning:  #pragma once
warning:          ^~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c: In function 'disk_setsize':
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:16:1: warning: no return statement in function returning non-void [-Wreturn-type]
warning:  static int disk_setsize() { FATAL("disk: cannot set the size"); }
warning:  ^~~~~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c: In function 'disk_read':
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:18:33: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                       ~~~~~~~~~~~^~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:18:50: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_read(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                      ~~~~~~~~~~~~~^~~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c: In function 'disk_write':
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:22:34: warning: unused parameter 'bs' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                        ~~~~~~~~~~~^~
warning: /home/liujjw/Documents/CODE/regos-2000/rusty_c/mydisk/file/disk.c:22:51: warning: unused parameter 'ino' [-Wunused-parameter]
warning:  static int disk_write(inode_intf bs, unsigned int ino, block_no offset, block_t *block) {
warning:                                       ~~~~~~~~~~~~~^~~
error[E0432]: unresolved import `core::sync::atomic::AtomicUsize`
  --> /home/liujjw/.cargo/registry/src/index.crates.io-6f17d22bba15001f/lock_api-0.4.10/src/remutex.rs:19:20
   |
19 |     sync::atomic::{AtomicUsize, Ordering},
   |                    ^^^^^^^^^^^ no `AtomicUsize` in `sync::atomic`

For more information about this error, try `rustc --explain E0432`.
error: could not compile `lock_api` (lib) due to previous error
